nats-micro/tests/ui/consumer_missing_stream.stderr
error: consumer stream is required; set `#[consumer(stream = "...")]`
 --> tests/ui/consumer_missing_stream.rs:8:5
  |
8 |     #[consumer(durable = "jobs")]
  |     ^
